<resources>
    <string name="app_name">SAMSUN TANITIM</string>
    <string name="kunduz">Vezirköprü merkezine yaklaşık 50 km mesafedeki bölgeye halk arasında “Kunduz Yaylası” da denmektedir. Kunduz Ormanları, Orta Karadeniz Bölümü’nde dağ turizmi için ideal bir bölgedir. Kunduz Dağı’nın en yüksek noktası 1791 metre ile Keltepe’dir. Kunduz Ormanları sınırları içerisinde “Geyik Üretme Çiftliği” tesisi de yer almaktadır. Bu tesis Karadeniz’de tektir. Tesis, sayıları azalan “kızıl geyik” türünün yetiştirilip doğaya salınması amacıyla projelendirilmiştir.</string>
    <string name="camgolu">Yakakent merkezinin yaklaşık 4 km batısında yer alan Çam Gölü; plajı, restoranları, konaklama tesisleri ile çam ormanı çevresindeki kamp, karavan ve piknik alanları, yürüyüş parkurları ve asırlık çam ağaçlarıyla kaplı eski ahşap koruluğuyla ilçenin görülmeye değer doğal alanlarındandır.</string>
    <string name="balikgolu">Kayalı Köyü’ndeki göl ve çevresi, özellikle yaz aylarında kamp severlerin tercih ettiği ve konakladığı mekânlardan bir tanesidir. Kunduz Balık Gölü, kamp ve karavan tatili için gerekli alt yapıya sahip bir bölgedir.</string>
    <string name="galeric">19 Mayıs merkezine yaklaşık 5 km mesafedeki Yörükler mevkiinde bulunan Galeriç Ormanı, ayrıca Kızılırmak Deltası sınırları içerisinde yer almaktadır. Subasar Ormanı, ilkbaharda tabanı tamamen suyla kaplanan ve yapraklarını döken ağaçlardan oluşmaktadır. Mevsiminde suyla kaplanan zeminin papatya çiçekleriyle örtülmesi muazzam bir görsel şölen sunmaktadır. Doğal yaşamın bir parçası olan Galeriç Ormanı’nda 35 ötücü kuş türünün kuluçkaya yattığı bilinmektedir.</string>
    <string name="nabiyan">Kültür ve Turizm Bakanlığı tarafından “Turizm Bölgesi” ilan edilen Nebiyan Dağı, il merkezine 28 km, ilçe merkezine ise 30 km mesafededir. 1224 metre yüksekliğiyle yörenin en yüksek noktalarından olan Nebiyan Bölgesi, “Nebiyan Yaylası” olarak da anılmaktadır. Turizm bölgesinde dağcılık, yamaç paraşütü, doğa yürüyüşü, yayla turizmi, foto safari ve kuş gözlemciliği gibi pek çok etkinliği gerçekleştirmek mümkündür. Bol oksijenli ormanlarıyla şifa veren Nebiyan Dağı, doğa turizmi açısından önemli bir bölgedir.</string>
    <string name="bayraktepe">Tekkeköy merkezine yaklaşık 4 km mesafede yer alan tabiat parkı, “Millî Parklar Kanunu” kapsamında 2015 yılında tabiat parkı ilan edilmiştir. Yaklaşık 132 hektar büyüklüğündeki alanda ana bitki örtüsü kayın, gürgen ve meşe ağaçlarından oluşmaktadır. Tabiat parkı içerisinde restoran, mescit, piknik alanı, çocuk oyun alanı ile bisiklet ve yürüyüş yolları bulunmaktadır. Bölgede doğa yürüyüşü, bisiklet turu, foto safari ile bitki ve yaban hayatı izleme faaliyetleri gibi pek çok aktivite gerçekleştirilebilmektedir. Tabiat parkının zirve noktasında yer alan eski kale kalıntıları sebebiyle bölge I. ve III. Arkeolojik Sit Alanı olarak da ilan edilmiştir.</string>
    <string name="cakirlar">İncesu Yalı mevkiinde yer alan ve Atakum merkezine yaklaşık 19 km uzaklıkta olan Çakırlar Korusu, Samsun’un bilinen en eski piknik, doğa yürüyüşü ve rekreasyon alanlarından biridir. Son yıllarda yapılan sosyal tesislerle birlikte doğayla buluşmak isteyen vatandaşlarımız için artık ideal bir mekân konumundadır.</string>
    <string name="kocadag">Kabadüz mevkiinde yer alan Kocadağ, Karadeniz Bölgesi’nin önemli kamp alanlarındandır. Atakum ilçe merkezine yaklaşık 15 km uzaklıkta olması, bu bölgeyi daha da ilgi çekici hale getirmektedir. Eşsiz bir manzaraya sahip olan Kocadağ Yaylası’nda doğa yürüyüşü, kamp ve yamaç paraşütü gibi pek çok aktiviteyi gerçekleştirmek mümkündür. Kocadağ, doğa sporları ve yayla şenliklerine de ev sahipliği yapmaktadır. Oksijeni bol Kocadağ Yaylası, kış mevsiminde de yoğun olarak ziyaretçi çekmektedir.</string>
    <string name="sarigazel"> 19 Mayıs ilçe merkezinde yer almaktadır. İl merkezine 38 km, ilçe merkezine ise 3 km mesafededir.

Park içerisinde yürüyüş yolları, çocuk oyun alanları, piknik masaları, kameriye ve kır lokantası bulunmaktadır. Alanda piknik, bisiklet turu, doğa yürüyüşü ve yaban hayatı gözlemi gibi etkinlikler yapılabilmektedir.</string>
    <string name="amazontabiat"> Terme ilçesi mülki sınırlarında bulunan tabiat parkıdır. Samsun merkeze 90, Terme merkeze 20 kilometre uzaklıktadır.</string>
    <string name="vezirsuyu">Adres: Çeltek, 55900 Vezirköprü/Samsun
Telefon: (0312) 207 50 00</string>
    <string name="piazza1">Piazza Samsun, Samsun\'da Çarşamba Caddesi üzerinde bulunan bir alışveriş merkezidir. Samsun bölgesine hizmet vermektedir ve aynı zamanda 160 mağaza ile Orta Karadeniz\'in önde gelen alışveriş merkezi ve En Büyük AVM\'sidir. Piazza Samsun, 2013 yılında Rönesans Development Group tarafından tamamlandı.</string>
    <string name="piazza2">Adres: Yenimahalle, Çarşamba Cd. No:52, 55080 Canik/Samsun
        Saatler:
        Kapanış saati: 22:00
        Telefon: 0850 207 5767
        Açılış tarihi: Mart 2013
        Mağaza ve hizmetlerin sayısı: 160 (2022)</string>
    <string name="bulvaravm">Mağazalar ve tarihi meydana bakan açık havada oturma alanına sahip restoranlarıyla alışveriş merkezi.
Bulunduğu yer: BULVAR AVM
        Adres: Kale, 19 Mayıs Blv. No:17, 55030 İlkadım/Samsun
        Saatler:
        Kapanış saati: 22:00
        Telefon: (0362) 290 27 55</string>
    <string name="citymall">Ünlü markaların mağazaları, restoranlar, teraslar ve sinema ile Karadeniz\'e bakan bir binada yer alan alışveriş merkezi.

        Adres: Mimarsinan, 220. Sk., 55200 Atakum/Samsun
        Saatler:
        Kapanış saati: 22:00
        Telefon: (0362) 437 61 01</string>
</resources>