<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dogal_guzellikler"
    android:background="@color/material_dynamic_neutral80"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Kunduz Ormanları"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:srcCompat="@drawable/kunduz_ormanlari" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kunduz"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Çam Gölü Mesire Alanı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/camgolu" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camgolu"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Kunduz Balık Gölü Kamp Alanı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/balikgolu" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balikgolu"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Galeriç Subasar Ormanı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:srcCompat="@drawable/galeric" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galeric"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Nebiyan Dağı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:srcCompat="@drawable/nabiyan" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nabiyan"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Bayraktepe Tabiat Parkı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/bayraktepe" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayraktepe"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Çakırlar Korusu"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/cakirlar" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cakirlar"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Kocadağ Yaylası Kamp ve Mesire Alanı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/kocadag" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kocadag"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
