<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alisverismerkezleri"
    android:background="@color/material_dynamic_neutral80">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Piazza AVM"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/piazza" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piazza1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piazza2"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Bulvar AVM"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/bulvaravm" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bulvaravm"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="CityMall AVM"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/citymall" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citymall"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>