<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabiat_parklari"
    android:background="@color/material_dynamic_neutral80">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Sarıgazel Tabiat Parkı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/sarigazel" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sarigazel"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Amazon Tabiat Parkı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/amazontabiat" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazontabiat"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Vezirsuyu Tabiat Parkı"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/vezirsuyu" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vezirsuyu"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>